[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "lutlib"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
authors = [
  {email = "phyngk@gmail.com"},
  {name = "phyng"}
]
maintainers = [
  {name = "phyng", email = "phyngk@gmail.com"}
]

[project.urls]
homepage = "https://github.com/phyng/lutlib"
documentation = "https://github.com/phyng/lutlib"
repository = "https://github.com/phyng/lutlib"

[tool.maturin]
features = ["pyo3/extension-module"]
